# py4cst

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: __init__.py  example000-project.py  example001-project-parameters.py  example002-simple-structure-gen.py  example003-project-units.py  example004-solver.py  example005-project-frequency.py  example006-boundaries.py  example007-mesh-settings.py  example008-material-library.py  example009-farfield-export.py  example010-s-matrix-export.py  example010-s-parameter-export.py  example011-matrix-conversions.py  example012-lib-parameter-sweep.py  example013-farfield-plot.py  example014-farfield-utils.py  example015-s-matrices.py  example016-custom-s-tensor.py  example017-extract-cst-file.py  example018-import-history-list.py
lib/: LICENSE  README.md  setup.py
src/: test.py
tests/: basic.py  brick.py  build_spiral.py  farfield.py  ffs.py  matrix_conversions_test.py  s_param.py  s_param_test.py
tests2/: basic.py
tests_old/: basic_project_test.py  clear_cache_test.py  lib_test.py  material_library_test.py  parameter_test.py
tools/: generate_vba_wrappers.py
vba_mappings/: ads_cosimulation.toml  align.toml  analytical_curve.toml  analytical_face.toml  anchorpoint.toml  arc.toml  asymptotic_solver.toml  background.toml  boundary.toml  brick.toml  component.toml  cone.toml  curve.toml  cylinder.toml  discrete_face_port.toml  discrete_port.toml  eigenmode_solver.toml  elliptical_cylinder.toml  extrude.toml  farfield_plot.toml  farfield_source.toml  fd_solver.toml  field_source.toml  floquet_port.toml  group.toml  (+30 more)
(+181 files in other folders)
